@@ -809,9 +809,10 @@ class General_options
 	      N_("(ARM only) Fix binaries for Cortex-A8 erratum."),
 	      N_("(ARM only) Do not fix binaries for Cortex-A8 erratum."));
 
-  DEFINE_bool(fix_cortex_a53, options::TWO_DASHES, '\0', false,
-	      N_("(AArch64 only) Scan and fix binaries for Cortex-A53 errata."),
-	      N_("(AArch64 only) Do not scan for Cortex-A53 errata."));
+  DEFINE_bool(fix_cortex_a53_843419, options::TWO_DASHES, '\0', false,
+	      N_("(AArch64 only) Scan binaries for Cortex-A53 errata 843419."),
+	      N_("(AArch64 only) Do not scan binaries for Cortex-A53 "
+		 "errata 843419."));
 
   DEFINE_bool(fix_arm1176, options::TWO_DASHES, '\0', true,
 	      N_("(ARM only) Fix binaries for ARM1176 erratum."),
@@ -1332,9 +1333,6 @@ class General_options
 		    NULL, true);
 
   DEFINE_bool(fix_cortex_a53_835769, options::TWO_DASHES, '\0', false,
-	      N_("Ignored for now"), NULL);
-
-  DEFINE_bool(fix_cortex_a53_843419, options::TWO_DASHES, '\0', false,
 	      N_("Ignored for now"), NULL);
 
  public:
